@@ -8,6 +8,8 @@ version 3.012:
 
 	Improvements:
 	- add .gitignore
+	- convert install process to OODoc 3.05
+	- restyle code to OODoc v3
 
 version 3.011: Fri Sep 15 20:17:44 CEST 2023
 
